# LEEN_AI

./: .editorconfig  .env.example  .gitignore  .prettierignore  README.md  docker-compose.prod.yml  docker-compose.yml  satyam.txt
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/dependencies/: __init__.py
backend/app/api/v1/endpoints/: health.py
backend/app/config/: settings.py
backend/app/core/: celery_app.py  exceptions.py  logging.py  tasks.py
backend/app/database/: session.py
backend/app/middlewares/: __init__.py  logging.py  request_id.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  response.py
backend/app/services/: __init__.py  redis_service.py
docs/: DEVELOPER_HANDBOOK.html
docs/architecture/: ARCHITECTURE.md  PROJECT_STRUCTURE.md
docs/setup/: DEPLOYMENT.md  SETUP.md
docs/standards/: CODING_STANDARDS.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/layout/: Footer.jsx  (+1 more)
frontend/src/layouts/: RootLayout.jsx
frontend/src/pages/: DashboardPage.jsx  LandingPage.jsx  LoginPage.jsx  RegisterPage.jsx  index.js
frontend/src/routes/: index.jsx
frontend/src/services/: api.js
frontend/src/store/: query-provider.jsx
infrastructure/docker/: api.Dockerfile  nginx.conf  nginx.prod.conf  web.Dockerfile
infrastructure/scripts/: reset-db.sh  setup.sh
